<resources>
    <string name="app_name">悦图</string>

    <!-- 登录 -->
    <string name="login_name">名称</string>
    <string name="login_pwd">密码</string>
    <string name="login">登陆</string>
    <string name="settings">设置</string>
    <string name="home">主页</string>
    <string name="about">关于</string>


    <!-- *************************************** filter *************************************** -->
    <string name="filter_none">Original</string>
    <string name="filter_amaro">Amaro</string>
    <string name="filter_brannan">Brannan</string>
    <string name="filter_brooklyn">Brooklyn</string>
    <string name="filter_Earlybird">EarlyBird</string>
    <string name="filter_freud">Freud</string>
    <string name="filter_hefe">Hefe</string>
    <string name="filter_hudson">Hudson</string>
    <string name="filter_inkwell">Inkwell</string>
    <string name="filter_kevin">Kevin</string>
    <string name="filter_lomo">Lomo</string>
    <string name="filter_n1977">1977</string>
    <string name="filter_nashville">Nashville</string>
    <string name="filter_pixar">Pixar</string>
    <string name="filter_rise">Rise</string>
    <string name="filter_sierra">Sierra</string>
    <string name="filter_sutro">Sutro</string>
    <string name="filter_toastero">Toaster2</string>
    <string name="filter_valencia">Valencia</string>
    <string name="filter_walden">Walden</string>
    <string name="filter_xproii">XproII</string>
    <string name="filter_whitecat">WhiteCat</string>
    <string name="filter_blackcat">BlackCat</string>
    <string name="filter_romance">Romance</string>
    <string name="filter_sakura">Sakura</string>
    <string name="filter_antique">Antique</string>
    <string name="filter_beauty">Beauty</string>
    <string name="filter_calm">Calm</string>
    <string name="filter_cool">Cool</string>
    <string name="filter_emerald">Emerald</string>
    <string name="filter_evergreen">Evergreen</string>
    <string name="filter_fairytale">Fairytale</string>
    <string name="filter_healthy">Healthy</string>
    <string name="filter_latte">Latte</string>
    <string name="filter_nostalgia">Nostalgia</string>
    <string name="filter_tender">Tender</string>
    <string name="filter_warm">Warm</string>
    <string name="filter_sweets">Sweets</string>
    <string name="filter_sunrise">Sunrise</string>
    <string name="filter_sunset">Sunset</string>
    <string name="filter_skinwhiten">SkinWhiten</string>
    <string name="filter_crayon">Crayon</string>
    <string name="filter_sketch">Sketch</string>

    <!--关于-->
    <string name="acabout_author">联系作者</string>
    <string name="acabout_about">
        &#160;&#160;Email: zjmgithub@163.com \n\n
        &#160;Github: https://github.com/zhaojianmou/kotilnImage \n\n
        &#160;APP版本：1.0.1 \n\n
    </string>

    <string name="browse_location">位置</string>
    <string name="browse_show">浏览</string>
    <string name="browse_map">地图</string>
    <string name="bar_editor">编辑</string>

    <string name="image_localtion_info_no">没有获取到坐标信息</string>

    <!-- *************************************** BaiduMap *************************************** -->
    <string name="map_location">位置</string>
    <string name="map_photo">地图相册</string>


</resources>
