<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300px"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:background="@color/bg_color_685562"
        android:text="@string/browse_show"/>

    <Button
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:layout_marginTop="2px"
        android:background="@color/bg_color_685562"
        android:text="@string/browse_location"/>

    <Button
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:layout_marginTop="2px"
        android:background="@color/bg_color_685562"
        android:text="@string/browse_map"/>


</LinearLayout>
