<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/bg_color_e6e6e6"
                android:gravity="center"
                android:paddingLeft="30px"
                android:paddingRight="30px"
                android:text="@string/login_name"
                android:textColor="@color/bg_color_3c3f41"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginTop="50px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/bg_color_e6e6e6"
                android:gravity="center"
                android:paddingLeft="30px"
                android:paddingRight="30px"
                android:text="@string/login_pwd"
                android:textColor="@color/bg_color_3c3f41"/>

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginTop="150px"
            android:text="@string/login"/>

    </LinearLayout>


</RelativeLayout>
